--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ Loading mindgames from mindgames.apk
     Python  : 3.12
     CDN URL : https://pygame-web.github.io/archives/0.9/
     Screen  : 1280x720
-    Title   : mindgames
+    Title   : Mind Creators
     Folder  : mindgames
     Authors : pgw
     SPDX-License-Identifier: cookiecutter.spdx
